<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:layout_marginBottom="0dp"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_margin="5dp"
    	android:background="#E0E0E0"
        >
            <TextView
		        android:padding="5dp"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:textSize="18sp"
		        android:text="@string/communcation_type" />
            <RadioGroup android:id="@+id/grpCommType"
                android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:orientation="horizontal"
		        android:layout_marginRight="20dp"
                >
                <RadioButton android:id="@+id/rdoBluetooth" 
                    android:layout_marginRight="20dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/bluetooth"/>
                <RadioButton android:id="@+id/rdoUsb" 
                    android:layout_gravity="center_vertical"
                    android:text="@string/usb"/>
            </RadioGroup>

            <Button android:id="@+id/btnOpen"
				    android:text="@string/open"
				    style="@style/button_style"
		    />
        </LinearLayout>
        
	<ListView  android:id="@+id/listParams"
	    	   android:layout_height="0dp"
	   		   android:layout_width="fill_parent"
	   		   android:layout_weight="1"
	    ></ListView>

	<TextView	android:id="@+id/txtLog" 
    		android:padding="5dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textIsSelectable="true"
	        android:visibility="gone"
	        android:textSize="18sp"/>

            
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	>
            <Button android:id="@+id/btnSetting"
                android:text="@string/setting"
		        style="@style/button_style"
		        />
            <Button android:id="@+id/btnRead"
		        android:text="@string/read"
				style="@style/button_style"
		        />
            <Button android:id="@+id/btnSave"
		    android:text="@string/save"
		    style="@style/button_style"
		    />
    </LinearLayout>        
        
</LinearLayout>